finish new pages and fix list

--- a/about.html
+++ b/about.html
@@ -56,12 +56,12 @@
             </div>
         </section>
 
-        <section class="a a2 grid g-one a-end">
+        <section class="a a2 grid g-one">
             <div class="a2_img">
                 <img src="src/images/img-43.jpg" alt="WELLTECH">
             </div>
             <div class="container">
-                <div class="a2_info pt-60 pb-60 md:pt-80">
+                <div class="a2_info pt-40 pb-40 md:pt-60">
                     <div class="c_h3">
                         <h3 class="f-40 lg:f-48">WELLTECH</h3>
                     </div>
