--- a/grzx.html
+++ b/grzx.html
@@ -30,7 +30,7 @@
                             <li><p>Country/Region:<span>1221212</span></p></li>
                             <li><p>Company Name:<span>1221212</span></p></li>
                         </ul>
-                        <a href="#">Set up <img src="src/images/img-103.png" alt="up"></a>
+                        <a href="#" data-gofancy="set">Set up <img src="src/images/img-103.png" alt="up"></a>
                     </div>
                 </div>
 
@@ -282,6 +282,26 @@
                     </div>
                 </div>
 
+            </div>
+        </section>
+
+        <section class="set_up_fanc fancy" data-fancy="set">
+            <div class="set_up_fanc_box">
+                <div class="set_up_fanc_box_top">
+                    <div class="set_up_fanc_box_top_i">
+                        <img src="src/images/img-134.png" alt="set">
+                    </div>
+                    <div class="set_up_fanc_box_top_l mt-20 mb-40">
+                        <p class="f-18 md:f-24 f-center">Do you want to delete this drawing?</p>
+                    </div>
+                    <div class="set_up_fanc_box_top_btn">
+                        <a href="#" class="btn btn-normal">Cancel</a>
+                        <a href="#" class="btn btn-primary">Confirm</a>
+                    </div>
+                </div>
+                <div class="set_up_fanc_box_close fancy_close">
+                    <img src="src/images/img-135.png" alt="close">
+                </div>
             </div>
         </section>
 
