--- a/material.html
+++ b/material.html
@@ -83,7 +83,7 @@
                             <h3 class="f-20">High nitrogen non-magnetic stainless steel</h3>
                             <div class="l_materials_item_line"></div>
                             <div class="l_materials_item_brand">
-                                <p class="f-16">Brand:</p>
+                                <p class="f-16 ppins-Medium">Brand:</p>
                                 <p class="f-16">
                                     P550 <br>
                                     P650<br>
