--- a/news.html
+++ b/news.html
@@ -63,7 +63,7 @@
             </div>
             <div class="c_sort c_sort_swiper swiper">
             <ul class="flex swiper-wrapper">
-                <li class="flex swiper-slide"><a class="pt-30 pb-30" href="javascript:;">Group News</a></li>
+                <li class="flex swiper-slide"><a class="pt-30 pb-30 cur" href="javascript:;">Group News</a></li>
                 <li class="flex swiper-slide"><a class="pt-30 pb-30" href="javascript:;">Industry News</a></li>
             </ul>
             </div>
