--- a/solution.html
+++ b/solution.html
@@ -85,7 +85,7 @@
         <section class="s s2 pt-120 pb-120">
             <div class="container grid grid-2">
                 <div class="s2_left">
-                    <img src="src/images/img-30.jpg" alt="technology" class="relative o-hidden">
+                    <img src="src/images/img-125.jpg" alt="technology" class="relative o-hidden">
                 </div>
                 <div class="s2_right pl-100 flex f-col j-center">
                     <p class="b f-20 mb-10 ppins-Medium">Technical Capability Matrix 01</p>
@@ -105,7 +105,7 @@
                     <a href="javasscript:;" class="btn btn-bc mt-30">Explore more</a>
                 </div>
                 <div class="s3_left">
-                    <img src="src/images/img-30.jpg" alt="technology" class="relative o-hidden">
+                    <img src="src/images/img-126.jpg" alt="technology" class="relative o-hidden">
                 </div>
             </div>
         </section>
@@ -194,35 +194,35 @@
                         <div class="s6_showImg_item">
                             <img src="src/images/img-74.png" alt="s6">
                             <div class="s6_showImg_item_info">
-                                <p class="t mb-10 ppins-bold">Prototype design</p>
+                                <p class="t mb-10 ppins-bold">Prototype design1</p>
                                 <p class="s">Prototype design Prototype design Prototype design Prototype design</p>
                             </div>
                         </div>
                         <div class="s6_showImg_item">
-                            <img src="src/images/img-74.png" alt="s6">
+                            <img src="src/images/img-127.jpg" alt="s6">
                             <div class="s6_showImg_item_info">
-                                <p class="t mb-10 ppins-bold">Prototype design</p>
+                                <p class="t mb-10 ppins-bold">Prototype design2</p>
                                 <p class="s">Prototype design Prototype design Prototype design Prototype design</p>
                             </div>
                         </div>
                         <div class="s6_showImg_item">
-                            <img src="src/images/img-74.png" alt="s6">
+                            <img src="src/images/img-128.jpg" alt="s6">
                             <div class="s6_showImg_item_info">
-                                <p class="t mb-10 ppins-bold">Prototype design</p>
+                                <p class="t mb-10 ppins-bold">Prototype design3</p>
                                 <p class="s">Prototype design Prototype design Prototype design Prototype design</p>
                             </div>
                         </div>
                         <div class="s6_showImg_item">
-                            <img src="src/images/img-74.png" alt="s6">
+                            <img src="src/images/img-129.jpg" alt="s6">
                             <div class="s6_showImg_item_info">
-                                <p class="t mb-10 ppins-bold">Prototype design</p>
+                                <p class="t mb-10 ppins-bold">Prototype design4</p>
                                 <p class="s">Prototype design Prototype design Prototype design Prototype design</p>
                             </div>
                         </div>
                         <div class="s6_showImg_item">
-                            <img src="src/images/img-74.png" alt="s6">
+                            <img src="src/images/img-130.jpg" alt="s6">
                             <div class="s6_showImg_item_info">
-                                <p class="t mb-10 ppins-bold">Prototype design</p>
+                                <p class="t mb-10 ppins-bold">Prototype design5</p>
                                 <p class="s">Prototype design Prototype design Prototype design Prototype design</p>
                             </div>
                         </div>
