--- a/technology.html
+++ b/technology.html
@@ -69,7 +69,7 @@
             <div class="container flex j-between g-10">
                 <div class="c_sort c_sort_swiper swiper">
                     <ul class="flex swiper-wrapper">
-                        <li class="flex swiper-slide"><a class="pt-30 pb-30" href="javascript:;">Precision manufacturing process</a></li>
+                        <li class="flex swiper-slide"><a class="pt-30 pb-30 cur" href="javascript:;">Precision manufacturing process</a></li>
                         <li class="flex swiper-slide"><a class="pt-30 pb-30" href="javascript:;">Special arts and crafts</a></li>
                     </ul>
                 </div>
