--- a/case.html
+++ b/case.html
@@ -59,11 +59,11 @@
           </ul>
         </div>
         <div class="c_h1 pt-80 pb-60 xl:pt-100">
-          <h1 class="f-40 lg:f-48">Customer case</h1>
+          <h1 class="f-40 lg:f-56">Customer case</h1>
         </div>
         <div class="c_sort c_sort_swiper swiper">
           <ul class="flex swiper-wrapper">
-            <li class="flex swiper-slide"><a class="pt-30 pb-30" href="javascript:;">All</a></li>
+            <li class="flex swiper-slide"><a class="pt-30 pb-30 cur" href="javascript:;">All</a></li>
             <li class="flex swiper-slide"><a class="pt-30 pb-30" href="javascript:;">EADS</a></li>
             <li class="flex swiper-slide"><a class="pt-30 pb-30" href="javascript:;">Medical treatment</a></li>
             <li class="flex swiper-slide"><a class="pt-30 pb-30" href="javascript:;">Ocean</a></li>
