--- a/index.html
+++ b/index.html
@@ -19,7 +19,27 @@
     <%- header %>
 
     <main class="main">
-        <section class="homeBanner">
+        <section class="homeBanner grid g-one">
+            <div class="homeBanner_left flex">
+                <div class="homeBanner_left_Box">
+                    <p class="f-14 md:f-16 ppins-Medium title"><a href="#">Precision manufacturing process</a></p>
+                    <p class="f-12 md:f-14 op-6"><a href="#">Special arts and crafts</a></p>
+                    <p class="f-12 md:f-14 op-6"><a href="#">Precision deep hole machining</a></p>
+                    <p class="f-12 md:f-14 op-6"><a href="#">Deep hole drilling eccentric hole</a></p>
+                    <p class="f-12 md:f-14 op-6"><a href="#">Ultra deep gun drill</a></p>
+                    <p class="f-12 md:f-14 op-6"><a href="#">Thin shaft machining</a></p>
+                    <p class="f-12 md:f-14 op-6"><a href="#">Thread rolling</a></p>
+                </div>
+                <div class="homeBanner_left_Box">
+                    <p class="f-14 md:f-16 ppins-Medium title"><a href="#">Precision manufacturing process</a></p>
+                    <p class="f-12 md:f-14 op-6"><a href="#">Special arts and crafts</a></p>
+                    <p class="f-12 md:f-14 op-6"><a href="#">Precision deep hole machining</a></p>
+                    <p class="f-12 md:f-14 op-6"><a href="#">Deep hole drilling eccentric hole</a></p>
+                    <p class="f-12 md:f-14 op-6"><a href="#">Ultra deep gun drill</a></p>
+                    <p class="f-12 md:f-14 op-6"><a href="#">Thin shaft machining</a></p>
+                    <p class="f-12 md:f-14 op-6"><a href="#">Thread rolling</a></p>
+                </div>
+            </div>
             <div class="index_banner swiper">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
@@ -113,7 +133,7 @@
                             </div>
                             <div class="ab_bottom_info">
                                 <h5 class="mb-10">Five major workshops</h5>
-                                <p>5</p>
+                                <p><i class="num" data-num="5">5</i></p>
                             </div>
                         </li>
                         <li>
@@ -122,7 +142,7 @@
                             </div>
                             <div class="ab_bottom_info">
                                 <h5 class="mb-10">Large equipment</h5>
-                                <p>200 <span>+</span></p>
+                                <p><i class="num" data-num="200">200</i> <span>+</span></p>
                             </div>
                         </li>
                         <li>
@@ -131,7 +151,8 @@
                             </div>
                             <div class="ab_bottom_info">
                                 <h5 class="mb-10">Annual production equipment</h5>
-                                <p>100 <span>+</span></p>
+                                <p><i class="num" data-num="100">100</i> <span>+</span></p>
+
                             </div>
                         </li>
                         <li>
@@ -140,7 +161,7 @@
                             </div>
                             <div class="ab_bottom_info">
                                 <h5 class="mb-10">Maintenance capability</h5>
-                                <p>T4 <span>+</span></p>
+                                <p><i class="num" data-num="T4">T4</i> <span>+</span></p>
                             </div>
                         </li>
                     </ul>
