0710先提交，没办法再改下去了

--- a/grzx.html
+++ b/grzx.html
@@ -80,7 +80,7 @@
                                 <div class="">
                                     <p class="tishi">In the quotation</p>
                                 </div>
-                                <div class="anniu_this">
+                                <div class="anniu_this" data-gofancy="scht">
                                     <div class="anniu_1">
                                         <img src="src/images/img-104.png" alt="i">
                                     </div>
@@ -285,7 +285,7 @@
             </div>
         </section>
 
-        <section class="set_up_fanc fancy" data-fancy="set">
+        <section class="set_up_fanc fancy" data-fancy="scht">
             <div class="set_up_fanc_box">
                 <div class="set_up_fanc_box_top">
                     <div class="set_up_fanc_box_top_i">
@@ -298,6 +298,67 @@
                         <a href="#" class="btn btn-normal">Cancel</a>
                         <a href="#" class="btn btn-primary">Confirm</a>
                     </div>
+                </div>
+                <div class="set_up_fanc_box_close fancy_close">
+                    <img src="src/images/img-135.png" alt="close">
+                </div>
+            </div>
+        </section>
+
+        <section class="set_up_fanc fancy" data-fancy="set">
+            <div class="set_up_fanc_box">
+                <div class="set_up_fanc_box_top_header">
+                    <div class="set_up_fanc_box_top_title ppins-Medium">
+                        <p>Modify personal information</p>
+                    </div>
+                    <form action="">
+                        <div class="form flex f-col g-10 mb-20">
+                            <div class="e_input form-group">
+                                <label class="p_label f-16 ppins-Medium">Name</label>
+                                <div class="p_group">
+                                    <div class="input-group">
+                                        <input type="text" class="p_input f-14" name="text" data-name="e_input-1" placeholder="Your Name?">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="e_input form-group">
+                                <label class="p_label f-16 ppins-Medium">Phone</label>
+                                <div class="p_group">
+                                    <div class="input-group">
+                                        <input type="text" class="p_input f-14" name="text" data-name="e_input-2" placeholder="Your Phone?">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="e_input form-group">
+                                <label class="p_label f-16 ppins-Medium">Email</label>
+                                <div class="p_group">
+                                    <div class="input-group">
+                                        <input type="text" class="p_input f-14" name="text" data-name="e_input-3" placeholder="Your Email?">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="e_input form-group">
+                                <label class="p_label f-16 ppins-Medium">Corporate name</label>
+                                <div class="p_group">
+                                    <div class="input-group">
+                                        <input type="text" class="p_input f-14" name="text" data-name="e_input-4" placeholder="Your Corporate name?">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="e_input form-group">
+                                <label class="p_label f-16 ppins-Medium">Country/Region</label>
+                                <div class="p_group">
+                                    <div class="input-group">
+                                        <input type="text" class="p_input f-14" name="text" data-name="e_input-5" placeholder="Your Country/Region?">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="set_up_fanc_box_top_btn">
+                            <a href="#" class="btn btn-normal">Cancel</a>
+                            <a href="#" class="btn btn-primary">Save</a>
+                        </div>
+                    </form>
                 </div>
                 <div class="set_up_fanc_box_close fancy_close">
                     <img src="src/images/img-135.png" alt="close">
