--- a/login.html
+++ b/login.html
@@ -93,7 +93,7 @@
                             </label>
                         </div>
                         <button class="btn_module mt-10">
-                            <span class="f-16">Log on</span>
+                            <span class="f-16">Login</span>
                         </button>
                         <div class="otherLink flex a-center j-center mt-40 g-10">
                             <a href="#" data-gofancy="forgot_password">Forgot Password</a>
