--- a/register.html
+++ b/register.html
@@ -23,7 +23,7 @@
             <div class="container">
                 <div class="registerBox">
                     <div class="login">
-                        <a href="#">Log on</a>
+                        <a href="#">Login</a>
                     </div>
                     <div class="title">
                         <p class="t f-40 lg:f-48 ppins-bold f-center">Register</p>
