--- a/technology.html
+++ b/technology.html
@@ -118,6 +118,14 @@
                         <% }) %>
                     </div>
                 </div>
+                <div class="arr">
+                    <div class="arr_prev">
+                        <img src="src/svg/i-18.svg" alt="arr">
+                    </div>
+                    <div class="arr_next">
+                        <img src="src/svg/i-18.svg" alt="arr">
+                    </div>
+                </div>
             </div>
         </section>
 
