修改第二波完成

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                             </div>
                             <div class="index_title_bottom">
                                 <p class="f-14 lg:f-18">To provide you with unparalleled processing services</p>
-                                <a href="#" class="btn btn-f">Get a quote now</a>
+                                <a href="#" class="btn btn-f" hover-word="Get a quote now"><span>Get a quote now</span></a>
                             </div>
                         </div>
                     </div>
