第三波修改

--- a/case_detail.html
+++ b/case_detail.html
@@ -49,10 +49,12 @@
                     <img src="<%= item.img %>" alt="Customer case">
                 </div>
                 <div class="c_info radius-8 pl-30 pr-30 pt-30 pb-30 relative">
-                    <p class="t f-24">Solution 1</p>
-                    <p class="s f-16">Text Space Occupy Text Space Occupy Text Space Occupy Text Space Occupy Text Space Occupy Text Space Occupy</p>
-                    <div class="i mt-30 op-0">
-                    <img src="src/images/img-02.png" alt="Customer case">
+                    <div class="scroll_info">
+                        <p class="t f-24">Solution 1</p>
+                        <p class="s f-16">Text Space Occupy Text Space Occupy Text Space Occupy Text Space Occupy Text Space Occupy Text Space Occupy</p>
+                        <div class="i mt-30 op-0">
+                        <img src="src/images/img-02.png" alt="Customer case">
+                        </div>
                     </div>
                 </div>
             </a>
