第四波修改

--- a/index.html
+++ b/index.html
@@ -407,6 +407,47 @@
 
     </main>
 
+    <div class="sidebar">
+        <ul>
+            <li>
+                <div class="ico">
+                    <img src="src/svg/i-19.svg" alt="sidebar">
+                    <img src="src/svg/i-20.svg" alt="sidebar">
+                </div>
+                <div class="t f-12">
+                    <p>Online quotation</p>
+                </div>
+            </li>
+            <li class="he_top">
+                <div class="ico">
+                    <img src="src/svg/i-21.svg" alt="sidebar">
+                    <img src="src/svg/i-22.svg" alt="sidebar">
+                </div>
+                <div class="t f-12">
+                    <p>Unified Hotline</p>
+                </div>
+            </li>
+            <li class="he_bottom">
+                <div class="ico">
+                    <img src="src/svg/i-23.svg" alt="sidebar">
+                    <img src="src/svg/i-24.svg" alt="sidebar">
+                </div>
+                <div class="t f-12">
+                    <p>WhatsApp</p>
+                </div>
+            </li>
+            <li class="backTop">
+                <div class="ico">
+                    <img src="src/svg/i-25.svg" alt="sidebar" title="sidebar">
+                    <img src="src/svg/i-26.svg" alt="sidebar" title="sidebar">
+                </div>
+                <div class="t f-12">
+                    <p>Top up</p>
+                </div>
+            </li>
+        </ul>
+    </div>
+
     <%- footer %>
     
     <script type="module" crossorigin src="src/js/main.js"></script>
