第五波修改完成

--- a/quote_success.html
+++ b/quote_success.html
@@ -204,21 +204,51 @@
                                             <p>High nitrogen non-magnetic stainless steel 304</p>
                                             <p>High nitrogen non-magnetic stainless steel -316L</p>
                                             <p>High nitrogen non-magnetic stainless steel -321</p>
+                                            <div class="p_group mt-20">
+                                                <div class="input-group">
+                                                    <input type="text" class="p_input" name="text" data-name="e_input-3" autocomplete="off">
+                                                </div>
+                                            </div>
                                         </div>
                                         <div class="b_item">
                                             <p>test 2</p>
+                                            <div class="p_group mt-20">
+                                                <div class="input-group">
+                                                    <input type="text" class="p_input" name="text" data-name="e_input-3" autocomplete="off">
+                                                </div>
+                                            </div>
                                         </div>
                                         <div class="b_item">
                                             <p>test 3</p>
+                                            <div class="p_group mt-20">
+                                                <div class="input-group">
+                                                    <input type="text" class="p_input" name="text" data-name="e_input-3" autocomplete="off">
+                                                </div>
+                                            </div>
                                         </div>
                                         <div class="b_item">
                                             <p>test 4</p>
+                                            <div class="p_group mt-20">
+                                                <div class="input-group">
+                                                    <input type="text" class="p_input" name="text" data-name="e_input-3" autocomplete="off">
+                                                </div>
+                                            </div>
                                         </div>
                                         <div class="b_item">
                                             <p>test 5</p>
+                                            <div class="p_group mt-20">
+                                                <div class="input-group">
+                                                    <input type="text" class="p_input" name="text" data-name="e_input-3" autocomplete="off">
+                                                </div>
+                                            </div>
                                         </div>
                                         <div class="b_item">
                                             <p>test 6</p>
+                                            <div class="p_group mt-20">
+                                                <div class="input-group">
+                                                    <input type="text" class="p_input" name="text" data-name="e_input-3" autocomplete="off">
+                                                </div>
+                                            </div>
                                         </div>
                                         <div class="b_item">
                                             <p>test 7</p>
