第六波修改

--- a/case.html
+++ b/case.html
@@ -24,7 +24,7 @@
     %>
 
   <main class="main">
-    <section class="p_header">
+    <section class="p_header haveImg">
       <div class="c_img c_img_1">
         <img src="/src/images/img-01.png" alt="Customer case">
       </div>
