07302024 第七波修改完成

--- a/quote_success.html
+++ b/quote_success.html
@@ -86,9 +86,11 @@
                                     <div class="form_input">
                                         <div class="e_input-8 form-group">
                                             <div class="p_group">
-                                                <div class="input-group">
-                                                    <input type="text" class="p_input f-16" name="text" data-name="e_input-4" autocomplete="off">
-                                                </div>
+                                                <label for="appt-date">
+                                                    <div class="input-group">
+                                                        <input type="date" class="p_input f-16 custom-date" name="text" data-name="e_input-4" autocomplete="off" id="appt-date" name="appt-date">
+                                                    </div>
+                                                </label>
                                                 <div class="input_hint">
                                                     <p>Please enter your delivery time requirement here</p>
                                                 </div>
