第八波修改完成

--- a/quote_success.html
+++ b/quote_success.html
@@ -88,7 +88,7 @@
                                             <div class="p_group">
                                                 <label for="appt-date">
                                                     <div class="input-group">
-                                                        <input type="date" class="p_input f-16 custom-date" name="text" data-name="e_input-4" autocomplete="off" id="appt-date" name="appt-date">
+                                                        <input type="text" class="p_input f-16 custom-date" name="text" data-name="e_input-4" autocomplete="off" id="appt-date" name="appt-date">
                                                     </div>
                                                 </label>
                                                 <div class="input_hint">
